# kde3-kdeutils

./: CMakeLists.txt  ConfigureChecks.cmake  config.h.cmake  configure  configure.in  kdeutils.lsm
ark/: CMakeLists.txt
ark/pics/: CMakeLists.txt
charselectapplet/: kcharselectapplet.desktop
doc/KRegExpEditor/: index.cache.bz2
doc/ark/: index.cache.bz2
doc/kcalc/: index.cache.bz2
doc/kcharselect/: index.cache.bz2
doc/kdelirc/irkick/: index.cache.bz2
doc/kdelirc/kcmlirc/: index.cache.bz2
doc/kdf/: index.cache.bz2
doc/kedit/: index.cache.bz2
doc/kfloppy/: index.cache.bz2
doc/kgpg/: index.cache.bz2
doc/khexedit/: index.cache.bz2
doc/kinfocenter/blockdevices/: index.cache.bz2
doc/kjots/: index.cache.bz2
doc/ksim/: index.cache.bz2
doc/ktimer/: index.cache.bz2
doc/kwallet/: index.cache.bz2
doc/superkaramba/: index.cache.bz2
kcalc/: CMakeLists.txt
kcalc/knumber/: CMakeLists.txt
kedit/: KEdit.desktop
khexedit/: khexedit.desktop
khexedit/lib/: kbufferranges.cpp  kbytesedit.cpp  kbytesedit.h
khexedit/parts/kbytesedit/: kbyteseditwidget.desktop  kbyteseditwidget.h
khexedit/parts/kpart/: khexedit2part.desktop
kjots/: Kjots.desktop
klaptopdaemon/applnk/: .directory  klaptopdaemon.desktop  laptop.desktop  pcmcia.desktop
kmilo/asus/: kmilo_asus.desktop
kmilo/delli8k/: kmilo_delli8k.desktop
kmilo/demo/: kmilo_demo.desktop
kmilo/generic/: kmilo_generic.desktop
kmilo/kmilo_kvaio/: kmilo_kvaio.desktop
kmilo/kmilo_kvaio/kcmkvaio/: kvaio.desktop
kmilo/kmilod/: kmilod.desktop  kmilopluginsvc.desktop
kmilo/powerbook/: kmilo_powerbook.desktop
kmilo/powerbook2/: kmilo_powerbook.desktop
kmilo/thinkpad/: kmilo_thinkpad.desktop
kmilo/thinkpad/kcmthinkpad/: thinkpad.desktop
ksim/: ksim.desktop
ksim/monitors/cpu/: cpu.desktop
ksim/monitors/disk/: disk.desktop
ksim/monitors/filesystem/: DFree.desktop
ksim/monitors/i8k/: i8k.desktop
ksim/monitors/lm_sensors/: Lm_sensors.desktop
ksim/monitors/mail/: mail.desktop
ksim/monitors/net/: Net.desktop
ksim/monitors/snmp/: Snmp.desktop
